# StorPool

./: .buildinfo  .gitignore  CMakeLists.txt  Dockerfile  README.md  analysis.html  counting.html  fizzbuzz.html  genindex.html  index.html  objects.inv  project_configure  reverse_engineering.html  search.html  searchindex.js
.doctrees/: analysis.doctree  counting.doctree  environment.pickle  fizzbuzz.doctree  index.doctree  reverse_engineering.doctree
.github/workflows/: build.yml  build_docs.yml
_modules/: disk_ht.h.html  main.c.html
_sources/: analysis.md.txt  counting.md.txt  fizzbuzz.md.txt  reverse_engineering.md.txt
analysis/: CMakeLists.txt
analysis/src/: disk_ht.c  disk_ht.h  main.c
analysis/test/: analysis.py  data_sample.json
counting/: CMakeLists.txt
counting/src/: main.c
counting/test/: counting.py
doc/: CMakeLists.txt  analysis.md  conf.py  index.md  requirements.txt  reverse_engineering.md
fizzbuzz/: CMakeLists.txt
fizzbuzz/src/: main.c
fizzbuzz/test/: fizzbuzz.py
reverse_engineering/: CMakeLists.txt  b.c
reverse_engineering/src/: a.c  b.c
scripts/: sp_project_build  sp_project_build_docs  sp_project_env  sp_project_test
